app-nginx/service.yml
apiVersion: v1
kind: Service
metadata:
  name: myapp
  namespace: app
spec:
  selector:
    app: myapp
  ports:
  - port: 80
    targetPort: 80
